Umstellung der Update-Funktionen auf uuid und Refactoring

--- a/frontend/pub/css/screen.css
+++ b/frontend/pub/css/screen.css
@@ -443,6 +443,7 @@ a:ACTIVE {
   height: 18px;
 }
 
+/*
 .ingreRow button {
 	display: none;
 }
@@ -450,6 +451,7 @@ a:ACTIVE {
 .showTabContent div:nth-last-child( 2 ) button {
 	display: inline-block;
 }
+*/
 
 .labelRow label {
 	margin-right: 10px;
@@ -492,9 +494,11 @@ a:ACTIVE {
 	display: flex
 }
 
+/*
 .todoRow button {
 	display: none;
 }
+*/
 
 .numberLabel{ width: 50px !important; }
 .numberInput{ width: 50px; }
